# VoiceSynth

./: .gitignore  CMakeCache.txt  CMakeLists.txt  README.md
.github/workflows/: ClangFormatCheck.yml  UbuntuBuild.yml  WindowsBuild.yml  workflow.yml
header/: LEndian.h  SawtoothWave.h  TriangleWave.h  WavWriter.h
source/: LEndian.h  MathConsts.h  SawtoothWave.cpp  SawtoothWave.h  SineWave.cpp  SineWave.h  Sound.cpp  Sound.h  SoundByte.cpp  SoundByte.h  SoundWriter.cpp  SoundWriter.h  SquareWave.cpp  SquareWave.h  TriangleWave.cpp  TriangleWave.h  WavWriter.cpp  WavWriter.h  Wave.cpp  Wave.h  main.cpp
unit_tests/: tst_fake.cpp  tst_soundWave.cpp
